--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
   .letter {
     display: inline-block;
     width: 50px;
-    hight: 40px;
+    height: 40px;
     margin: 0 10px;
     text-align: center;
     font-size: 60px;
