--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-#hidden-word-container {
+#word-container {
     position: relative;
     background-color: lightblue;
     width: 700px;
@@ -9,11 +9,11 @@
   .letter {
     display: inline-block;
     width: 50px;
-    height: 40px;
+    height: 70px;
     margin: 0 10px;
     text-align: center;
     font-size: 60px;
-    color: lightblue;
+    color: yellow;
     border-bottom: 5px solid black;
     /*visibility: hidden;
     background-color: #cccccc;*/
