--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,10 +23,16 @@ margin: 0;
     opacity: 0.9;
 }
 
+.display-none {
+    display: none;
+}
+
 body {
     position: relative;
     background-image: url("../images/paper_2.png");
     background-position: -90px 190px;
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 100vw;
     height: 100vh;
     margin: auto;
@@ -107,22 +113,23 @@ button:disabled {
     color: #e7a75d; 
 } 
 
-#win-box {
+.pop-box {
     position: absolute;
-    background-color: #65c088;
+    background-color: #73b1ca;
     opacity: 0.9;
     margin-bottom: 60px;
-    width: 270px;
-    height: 330px;
+    width: 300px;
+    height: 230px;
     z-index: 2;
     border-radius: 10%;
     font-size: 55px;
     font-weight: 900;
+    padding: 20px 0;
 }
 
-#pop-btn {
+.pop-btn {
     position: relative;
-    background-color: #32ebe1;
+    background-color: #93f7f2;
     font-family: 'Architects Daughter', cursive; 
     font-size: 25px;
     color: #0a0191;
@@ -130,5 +137,4 @@ button:disabled {
     height: 50px;
     border: 2px solid #ffffff;
     border-radius: 50px;
-    margin-top: 50px;
 }
