--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,25 +74,11 @@ body {
     color: #0a0191;
 }
 
-#draw-container {
-    position: relative;
-    width: 360px;
-    height: 170px;
-}
-
-#refresh-word-btn {
-    
-    font-family: 'Architects Daughter', cursive; 
-    width: 66px;
-    height: 50px;
-    border-radius: 50px;
-    margin: 3px 6px;
-}
 
 #keyboard-container {
     position: relative;
     width: 310px;
-    height: 320px;
+    height: 250px;
     text-align: center;
 }
 
@@ -104,6 +90,7 @@ body {
     font-family: 'Architects Daughter', cursive; 
     font-size: 38px;
     margin: 1px 5px;
+    line-height: 40px;
 }
 
 button:disabled { 
@@ -136,4 +123,140 @@ button:disabled {
     height: 50px;
     border: 2px solid #ffffff;
     border-radius: 50px;
+}
+
+#draw-container {
+    position: relative;
+    justify-content:space-between;
+    width: 300px;
+    height: 200px;
+}
+
+#refresh-word-btn {
+    font-family: 'Architects Daughter', cursive; 
+    font-size: 14px;
+    font-weight: 600;
+    width: 66px;
+    height: 50px;
+    border-radius: 50px;
+    margin: 3px 6px;
+}
+
+#draw-group {
+    position: relative;
+    width: 180px;
+    height: 190px;
+}
+
+.gallows {
+    position: absolute;
+    border: 3px solid #0A0191;
+    filter: blur(1px);
+}
+
+#line-1 {
+  width: 180px;
+  height: 0px;
+  top: 90px;
+  left: -40px;
+  transform: rotate(90deg);  
+}
+  
+#line-2 {
+  width: 73.67px;
+  height: 0px;
+  top: 180px;
+  left: 20px;    
+}
+  
+#line-3 {
+  width: 80px;
+  height: 0px;
+  top: 9px;
+  left: 44px;
+  transform: rotate(-2.51deg);
+}
+  
+#line-4 {
+  width: 35px;
+  height: 0px;
+  top: 25px;  
+  left:100px;  
+  border: 1px solid #0A0191;
+  filter: blur(1px);
+  transform: rotate(90deg);
+}
+
+#line-5 {
+    width: 20px;
+    height: 30px;
+    top: 40px;  
+    left:107px;
+    box-sizing: border-box;
+    border-radius: 50%;
+    filter: blur(1px);
+}
+
+.hangman {
+    position: absolute;
+    border: 1.5px solid #0A0191;
+    filter: blur(0.5px);
+}
+
+.hangman-hidden {
+    opacity: 0;
+}
+
+#head {
+    background-image: url("../images/hangman_face_3.jpg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 33px;
+    height: 34px;
+    top:43px;
+    left: 100px;
+    border-radius: 50%;
+    box-sizing: border-box;
+    z-index: 3;
+}
+
+ #body {
+    visibility: hidden;
+    width: 50px;
+    height: 0px;
+    top:100px;
+    left: 91px;
+    transform: rotate(90deg);
+ }
+
+ #arm-l {
+     width: 26.42px;
+     height: 0px;
+     top: 95px;
+     left: 90px;
+     transform: rotate(150.52deg);
+}
+
+#arm-r {
+    width: 28.3px;
+    height: 0px;
+    top: 96px;
+    left: 115px;
+    transform: rotate(32.01deg);
+}
+
+#leg-l {
+    width: 36.24px;
+    height: 0px;
+    top: 138px;
+    left: 87px;
+    transform: rotate(129.4deg);
+}
+
+#leg-r {
+    width: 38.42px;
+    height: 0px;
+    top: 138px;
+    left: 107px;
+    transform: rotate(51.34deg);
 }
