--- a/assets/css/play_section.css
+++ b/assets/css/play_section.css
@@ -3,7 +3,6 @@
     justify-content:space-between;
     width: 300px;
     height: 200px;
-    border: solid 1px;
 }
 
 /*Gallow container*/
@@ -11,7 +10,6 @@
     position: relative;
     width: 180px;
     height: 190px;
-    border: solid 1px;
 }
 
 .gallows {
@@ -142,6 +140,8 @@
     height: 50px;
     border-radius: 50px;
     margin: 3px 6px;
+    border: solid 2px #0a0191;
+    border-style:groove;
 }
 
 #score-container {
@@ -151,5 +151,4 @@
     height: 70px;
     font-size: 20px;
     font-weight: 600;
-    border: solid 1px;
 }
