--- a/assets/css/play_section.css
+++ b/assets/css/play_section.css
@@ -1,14 +1,14 @@
 #play-section {
     position: relative;
     justify-content:space-between;
-    width: 300px;
+    width: 320px;
     height: 200px;
 }
 
 /*Gallow container*/
 #gallow-container {
     position: relative;
-    width: 180px;
+    width: 160px;
     height: 190px;
 }
 
@@ -19,9 +19,9 @@
 }
 
 #gallow-line-1 {
-  width: 180px;
+  width: 193px;
   height: 0px;
-  top: 90px;
+  top: 94px;
   left: -40px;
   transform: rotate(90deg);  
 }
@@ -29,7 +29,7 @@
 #gallow-line-2 {
   width: 73.67px;
   height: 0px;
-  top: 180px;
+  top: 190px;
   left: 20px;    
 }
   
@@ -65,7 +65,7 @@
 #hangman-container {
     position: absolute;
     top:42px;
-    left: 84px;
+    right: 96px;
     width: 70px;
     height: 120px;
 }
@@ -130,8 +130,8 @@
     transform: rotate(51.34deg);
 }
 
-/*Refresh Word Button*/
-#refresh-word-btn {
+/*Play section button*/
+.ply-btn {
     position: relative;
     font-family: 'Architects Daughter', cursive; 
     font-size: 14px;
@@ -139,14 +139,12 @@
     width: 66px;
     height: 50px;
     border-radius: 50px;
-    margin: 3px 6px;
     border: solid 2px #0a0191;
     border-style:groove;
 }
 
 #score-container {
     position: relative;
-    margin-bottom: 40px;
     width: 80px;
     height: 70px;
     font-size: 20px;
