--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 @import "../css/play_section.css";
 
-*{box-sizing: border-box;
-margin: 0;
-}
-
+/*Utility*/
 .flex {
     display: flex;
 }
@@ -49,7 +46,6 @@ margin: 0;
     align-items: flex-end;
 }
 
-
 .c-blue {
     color: #0a0191;
 }
@@ -62,6 +58,18 @@ margin: 0;
 .display-none {
     display: none;
 }
+
+.margin-top {
+    margin-top: 30px;
+}
+
+.margin-bottom {
+    margin-bottom: 40px;
+}
+
+*{box-sizing: border-box;
+    margin: 0;
+    }
 
 body {
     position: relative;
@@ -86,6 +94,7 @@ body {
     border-radius: 3%;
 }
 
+/*Word section*/
 #word-section {
     position: relative;
     background-color: transparent;
@@ -110,11 +119,11 @@ body {
     color: #0a0191;
 }
 
-
+/*Keyboard Section*/
 #keyboard-section {
     position: relative;
     width: 310px;
-    height: 250px;
+    height: 200px;
     text-align: center;
 }
 
@@ -125,8 +134,8 @@ body {
     border-radius: 50px;
     border: solid 1px #0a0191;
     font-family: 'Architects Daughter', cursive; 
-    font-size: 38px;
-    margin: 1px 5px;
+    font-size: 36px;
+    margin: 1px 3px;
     line-height: 40px;
 }
 
@@ -136,18 +145,27 @@ button:disabled {
     color: #e7a75d; 
 } 
 
+/*Messages*/
 .pop-box {
     position: absolute;
     background-color: #73b1ca;
     opacity: 0.9;
-    margin-bottom: 60px;
-    width: 300px;
-    height: 230px;
     z-index: 3;
     border-radius: 10%;
     font-size: 55px;
     font-weight: 900;
     padding: 20px 0;
+}
+
+.pop-box-small {
+    margin-bottom: 60px;
+    width: 300px;
+    height: 230px;
+}
+
+.pop-box-large {
+    width: 300px;
+    height: 450px;
 }
 
 .pop-btn {
