[FIX] Minor style bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,24 +152,32 @@ button:disabled {
 /*Messages*/
 .pop-box {
     position: absolute;
-    background-color: #73b1ca;
+    background-color: #099dd8;
     opacity: 0.9;
     z-index: 3;
     border-radius: 10%;
-    font-size: 55px;
+    border: 2px solid #0a0191;
     font-weight: 900;
     padding: 20px 0;
 }
 
-.pop-box-small {
+#pop-box-small {
     margin-bottom: 60px;
     width: 300px;
     height: 230px;
+    font-size: 55px;
 }
 
-.pop-box-large {
+#pop-box-large {
+    margin-top: 40px;
     width: 300px;
-    height: 450px;
+    height: 530px;
+    text-align: center;
+    font-size: 40px;
+    line-height: 40px;
+    font-weight: 800;
+    color: #ffffff;
+    text-shadow: #000000ff 2px 2px 2px;
 }
 
 .pop-btn {
@@ -177,9 +185,11 @@ button:disabled {
     background-color: #93f7f2;
     font-family: 'Architects Daughter', cursive; 
     font-size: 25px;
+    font-weight: 600;
     color: #0a0191;
-    width: 90px;
+    width: auto;
     height: 50px;
-    border: 2px solid #ffffff;
+    border: 2px solid #0a0191;
     border-radius: 50px;
+    margin-top: 40px;
 }
