--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,6 @@ body {
     text-align: center;
     text-decoration: underline;
     font-size: 18px;
-    border: solid 0.1px #0a0191;
     border-radius: 3%;
 }
 
@@ -177,7 +176,6 @@ button:disabled {
     text-align: center;
     font-size: 40px;
     line-height: 40px;
-    
 }
 
 .pop-btn {
@@ -192,4 +190,5 @@ button:disabled {
     border: 2px solid #0a0191;
     border-radius: 50px;
     margin-top: 35px;
+    cursor: pointer;
 }
