--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,17 @@
     margin-bottom: 40px;
 }
 
+button {
+    cursor: pointer;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2); 
+    transform: scale(1); 
+    transition: all 0.2s 0s ease-in-out;  
+}
+
+button:hover {
+    transform: scale(2); 
+}
+
 *{box-sizing: border-box;
     margin: 0;
     }
@@ -190,5 +201,4 @@ button:disabled {
     border: 2px solid #0a0191;
     border-radius: 50px;
     margin-top: 35px;
-    cursor: pointer;
 }
