--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,86 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+@import "../css/utility.css";
 @import "../css/play_section.css";
-
-/*Utility*/
-.flex {
-    display: flex;
-}
-
-.column {
-    flex-direction: column;
-}
-
-.justify-between {
-    justify-content: space-between;
-}
-
-.justify-around {
-    justify-content: space-around;
-}
-
-.justify-evenly {
-    justify-content: space-evenly;
-}
-
-.justify-center {
-    justify-content: center;
-}
-
-.row-wrap {
-    flex-flow: row wrap;
-}
-
-.col-wrap {
-    flex-flow: column wrap;
-}
-
-.align-between {
-    align-content: space-between;
-}
-
-.items-start {
-    align-items: flex-start;
-}
-
-.items-center {
-    align-items: center;
-}
-
-.items-end {
-    align-items: flex-end;
-}
-
-.c-blue {
-    color: #0a0191;
-}
-
-.bg-white {
-    background-color: #ffffff;
-    opacity: 0.6;
-}
-
-.display-none {
-    display: none;
-}
-
-.margin-top {
-    margin-top: 30px;
-}
-
-.margin-bottom {
-    margin-bottom: 40px;
-}
-
-button {
-    cursor: pointer;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2); 
-    transform: scale(1); 
-    transition: all 0.2s 0s ease-in-out;  
-}
-
-button:hover {
-    transform: scale(1.2); 
-}
+@import "../css/popup._section.css";
 
 *{box-sizing: border-box;
     margin: 0;
@@ -159,54 +80,4 @@ button:disabled {
     color: #e7a75d; 
 } 
 
-/*Messages*/
-.pop-box {
-    position: absolute;
-    background-color: #099dd8;
-    opacity: 0.9;
-    z-index: 3;
-    width: 320px;
-    border-radius: 10%;
-    border: 2px solid #0a0191;
-    font-weight: 900;
-    padding: 20px 0;
-    font-weight: 800;
-    color: #ffffff;
-    text-shadow: #000000ff 2px 2px 2px;
-    /*Animation*/
-    visibility: visibile;
-    transition: all .3s;
-}
 
-.animate {
-    opacity: 0;
-    visibility: hidden;
-}
-
-#pop-box-small {
-    margin-bottom: 60px;
-    height: 230px;
-    font-size: 55px;
-}
-
-#pop-box-large {
-    margin-top: 40px;
-    height: 530px;
-    text-align: center;
-    font-size: 40px;
-    line-height: 40px;
-}
-
-.pop-btn {
-    position: relative;
-    background-color: #93f7f2;
-    font-family: 'Architects Daughter', cursive; 
-    font-size: 25px;
-    font-weight: 600;
-    color: #0a0191;
-    width: auto;
-    height: 50px;
-    border: 2px solid #0a0191;
-    border-radius: 50px;
-    margin-top: 35px;
-}
