--- a/assets/css/popup._section.css
+++ b/assets/css/popup._section.css
@@ -59,6 +59,35 @@
     }
 }
 
+@media all and (min-width: 640px) and (min-height: 360px)  {
+    .pop-box {
+        display: block;
+        text-align: center;
+        padding: 5px 0
+    }
+
+    #pop-box-large {
+        
+        width: 630px;
+        height: 270px;
+        font-size: 40px;
+        line-height: 60px;
+        border-radius: 6%;
+        margin-top: 40px;
+    }
+
+    #pop-btn1 {
+        display: block;
+        margin: 0 auto;
+    }
+
+    #pop-box-small {
+        margin-bottom: 20px;
+        height: 200px;
+        line-height: 90px;
+    }
+}
+
 /* 
 @media all and (min-height: 645px) and (max-height: 740px) {
     #pop-box-large {
