--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,6 +83,39 @@ button:disabled {
     background-color: #5db0e7; 
     opacity: 0.7;
 } 
+
+@media all and (min-width: 640px) and (min-height: 360px)  {
+    body {
+        flex-flow: row wrap;
+        display: flex;
+   }
+
+   .letter {
+    width: 20px;
+    height: 50px;
+    font-size: 28px;
+    }
+
+    #title-container {
+        position: absolute;
+        top: 10px;
+        left: 200px;
+    }
+
+    #keyboard-section {
+        width: 250px;
+        height: 230px;
+        margin-top: 80px;
+
+    }
+
+    .keyboard-key {
+        font-size: 34px;
+        margin: 0 1px;
+        line-height: 38px;
+    }
+}
+
 /* 
 @media (min-width: 400px) {
     .letter {
@@ -93,20 +126,9 @@ button:disabled {
 }
 
 @media (min-width: 630px) {
-    body {
-         flex-flow: row wrap;
-         display: flex;
-    }
+    
 
-    #title-container {
-        position: absolute;
-        top: 10px;
-        left: 200px;
-    }
 
-    .letter {
-        width: 22px;
-        height: 50px;
-        font-size: 30px;
-    }
+
+
 } */
