--- a/assets/css/play_section.css
+++ b/assets/css/play_section.css
@@ -3,7 +3,7 @@
     justify-content:space-between;
     width: 320px;
     height: 200px;
-    margin: 2rem 0 1rem;
+    margin: 1rem 0 1rem;
     padding-left: 8px;
 }
 
@@ -11,7 +11,7 @@
 #gallow-container {
     position: relative;
     width: 160px;
-    height: 190px;
+    height: 200px;
 }
 
 .gallows {
@@ -67,7 +67,7 @@
 #hangman-container {
     position: absolute;
     top:42px;
-    right: 96px;
+    right: 89px;
     width: 70px;
     height: 120px;
 }
@@ -150,12 +150,29 @@
     font-weight: 600;
 }
 
-@media all and (min-width: 640px) and (min-height: 360px) { 
+@media (min-width: 640px) and (max-height: 360px) {
     #play-section {
-        margin: 0 0 0 8px;
+        padding: 0;
+        width: 300px;
+    }
+
+    #gallow-container {
+        width: 150px;
+    }
+
+    #hangman-container {
+        top:42px;
+        right: 75px;
     }
 }
 
-/* @media (min-width: 630px) {
-    
-} */
+@media (min-width: 740px) and (max-height: 360px) {
+    #gallow-container {
+        width: 160px;
+    }
+
+    #hangman-container {
+        top:42px;
+        right: 79px;
+    }
+}
