--- a/assets/css/popup._section.css
+++ b/assets/css/popup._section.css
@@ -2,8 +2,6 @@
     position: absolute;
     background-color: #099dd8;
     opacity: 0.9;
-    z-index: 3;
-    width: 335px;
     border-radius: 10%;
     border: 2px solid #0a0191;
     font-weight: 900;
@@ -22,14 +20,15 @@
 }
 
 #pop-box-small {
-    margin-bottom: 60px;
+    width: 310px;
     height: 230px;
     font-size: 55px;
+    margin-top: 5rem;
 }
 
 #pop-box-large {
-    margin-top: 50px;
-    height: 540px;
+    width: inherit;
+    height: inherit;
     text-align: center;
     font-size: 44px;
     line-height: 44px;
@@ -42,10 +41,11 @@
     font-size: 25px;
     font-weight: 600;
     color: #0a0191;
-    min-width: 80px;
+    width: auto;
     height: 50px;
     border: 2px solid #0a0191;
     border-radius: 50px;
+    padding: 0 20px;
     margin: 20px 3px 0;
 }
 
@@ -53,77 +53,9 @@
     margin-top: 40px;
 }
 
-@media all and (min-height: 680px) {
-    #pop-box-large {
-        height: 600px;
-    }
-}
-
-@media all and (min-width: 640px) and (min-height: 360px)  {
-    .pop-box {
-        display: block;
-        text-align: center;
-        padding: 5px 0
-    }
-
-    #pop-box-large {
-        
-        width: 630px;
-        height: 270px;
-        font-size: 40px;
-        line-height: 60px;
-        border-radius: 6%;
-        margin-top: 40px;
-    }
-
-    #pop-btn1 {
-        display: block;
-        margin: 0 auto;
-    }
-
+@media (min-height: 700px) {
     #pop-box-small {
-        margin-bottom: 20px;
-        height: 200px;
-        line-height: 90px;
+        margin-top: 6rem;
     }
 }
 
-/* 
-@media all and (min-height: 645px) and (max-height: 740px) {
-    #pop-box-large {
-        height: 600px;
-    }
-}
-
-@media (min-width: 630px) {
-    .pop-box {
-        display: block;
-        text-align: center;
-        padding: 5px 0
-    }
-
-    #pop-box-small {
-        margin-bottom: 20px;
-        height: 200px;
-        line-height: 90px;
-    }
-
-    #pop-box-large {
-        
-        width: 630px;
-        height: 270px;
-        font-size: 40px;
-        line-height: 60px;
-        border-radius: 6%;
-        margin-top: 40px;
-    }
-
-    .pop-btn {
-        margin: 10px 3px 0;
-    }
-
-    #pop-btn1 {
-        display: block;
-        margin: 0 auto;
-    }
-}    */
