--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,6 @@
 @import "../css/play_section.css";
 @import "../css/popup._section.css";
 
-/* @media (min-width:768px) {
-    body {
-        justify-content: center;
-    }
-} */
 
 *{box-sizing: border-box;
     margin: 0;
@@ -25,6 +20,12 @@ body {
     color: #0a0191;
 }   
 
+main {
+    background-color: coral;
+    width: 100%;
+    height: 560px;
+}
+
 #title-container {
     position: relative;
     width: auto;
@@ -32,6 +33,7 @@ body {
     text-align: center;
     text-decoration: underline;
     font-size: 18px;
+    margin-bottom: 1rem;
 }
 
 /*Word section*/
@@ -65,6 +67,7 @@ body {
     width: 310px;
     height: 200px;
     text-align: center;
+    padding-top: 15px;
 }
 
 .keyboard-key {
@@ -84,51 +87,47 @@ button:disabled {
     opacity: 0.7;
 } 
 
-@media all and (min-width: 640px) and (min-height: 360px)  {
-    body {
-        flex-flow: row wrap;
-        display: flex;
-   }
+@media (min-height: 690px) {
+    #main {
+        background-color: lawngreen;
+        height: 640px;
+    }
+}
 
-   .letter {
-    width: 20px;
-    height: 50px;
-    font-size: 28px;
+@media (min-width: 640px) and (max-height: 360px) {
+    #main {
+        background-color: lightblue;
+        height: 310px;
+        flex-flow: column wrap;
+        
     }
 
     #title-container {
-        position: absolute;
-        top: 10px;
-        left: 200px;
+        margin-bottom: 0;
     }
 
     #keyboard-section {
-        width: 250px;
-        height: 230px;
-        margin-top: 80px;
-
+        width: 270px;
+        height: 270px;
+        margin-top: 20px;
     }
 
     .keyboard-key {
-        font-size: 34px;
-        margin: 0 1px;
-        line-height: 38px;
+        font-size: 36px;
+        margin: 2px 2px;
     }
 }
 
-/* 
-@media (min-width: 400px) {
-    .letter {
-        width: 25px;
-        height: 55px;
-        font-size: 35px;
+@media (min-width: 740px) and (max-height: 360px) {
+    #main {
+        background-color: lightgoldenrodyellow;
+    }
+
+    #keyboard-section {
+        width: 330px;
+        height: 250px;
+        margin-top: 50px;
     }
 }
 
-@media (min-width: 630px) {
-    
 
-
-
-
-} */
