--- a/assets/css/play_section.css
+++ b/assets/css/play_section.css
@@ -3,7 +3,7 @@
     justify-content:space-between;
     width: 320px;
     height: 200px;
-    margin: 1rem 0 1rem;
+    margin: 1rem 0;
     padding-left: 8px;
 }
 
@@ -11,7 +11,7 @@
 #gallow-container {
     position: relative;
     width: 160px;
-    height: 200px;
+    height: 190px;
 }
 
 .gallows {
@@ -21,7 +21,7 @@
 }
 
 #gallow-line-1 {
-  width: 193px;
+  width: 173px;
   height: 0px;
   top: 94px;
   left: -40px;
@@ -31,7 +31,7 @@
 #gallow-line-2 {
   width: 73.67px;
   height: 0px;
-  top: 190px;
+  top: 180px;
   left: 20px;    
 }
   
@@ -150,7 +150,43 @@
     font-weight: 600;
 }
 
-@media (min-width: 640px) and (max-height: 360px) {
+@media (min-width: 568px) {
+    #play-section {
+        padding: 0;
+        width: 300px;
+        height: 190px;
+    }
+
+    #gallow-container {
+        width: 150px;
+    }
+
+    #hangman-container {
+        top:42px;
+        right: 80px;
+    }
+}
+
+@media (min-width: 768px) and (min-height: 1024px) {
+    #play-section {
+        width: 500px;
+        height: 200px;
+        padding-left: 50px;
+    }
+
+    #hangman-container {
+        top: 42px;
+        right: 179px;
+    }
+
+    .ply-btn { 
+        font-size: 16px;
+        width: 76px;
+        height: 50px;
+    }
+}
+
+@media (min-width: 992) {
     #play-section {
         padding: 0;
         width: 300px;
@@ -162,27 +198,6 @@
 
     #hangman-container {
         top:42px;
-        right: 79px;
-    }
-}
-
-@media (min-width: 740px) and (max-height: 360px) {
-    #play-section {
-        padding: 0;
-        width: 320px;
-        margin: 0 0 1rem;
-    }
-
-    #gallow-container {
-        width: 160px;
-    }
-
-    #hangman-container {
-        top:42px;
-        right: 100px;
-    }
-
-    #score-container {
-        width: 90px;
+        right: 70px;
     }
 }
