--- a/assets/css/popup._section.css
+++ b/assets/css/popup._section.css
@@ -53,13 +53,7 @@
     margin-top: 40px;
 }
 
-@media (min-height: 690px) {
-    #pop-box-small {
-        margin-top: 9rem;
-    }
-}
-
-@media (min-width: 640px) and (max-height: 360px) {
+@media (min-width: 568px) {
     #pop-box-large {
         display: block;
         
@@ -67,8 +61,24 @@
 
     #pop-box-small {
         width: 330px;
-        /* height: 230px;
-        font-size: 55px; */
+        margin-top: 2rem;
+    }
+}
+
+@media (min-width: 768px) and (min-height: 1024px) {
+    #pop-box-small {
+        width: 450px;
+        margin-top: 130px;
+    }
+}
+
+@media (min-width: 992px) {
+    #pop-box-large {
+        display: block;   
+    }
+
+    #pop-box-small {
+        width: 330px;
         margin-top: 2rem;
     }
 }
