--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,6 @@ body {
 }   
 
 main {
-    background-color: coral;
     width: 100%;
     height: 560px;
 }
@@ -87,23 +86,81 @@ button:disabled {
     opacity: 0.7;
 } 
 
-@media (min-height: 690px) {
+@media (min-width: 568px) {
     #main {
-        background-color: lawngreen;
-        height: 640px;
-    }
-}
-
-@media (min-width: 640px) and (max-height: 360px) {
-    #main {
-        background-color: lightblue;
-        height: 310px;
+        height: 290px;
         flex-flow: column wrap;
-        
     }
 
     #title-container {
         margin-bottom: 0;
+    }
+
+    #keyboard-section {
+        width: 270px;
+        height: 260px;
+        margin-top: 0;
+        padding-top: 15px;
+    }
+
+    .keyboard-key {
+        font-size: 36px;
+        margin: 2px 2px;
+    }
+}
+
+@media (min-width: 768px) and (min-height: 1024px) {
+    #main {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        width: 600px;
+        height: 800px;
+        margin: auto;
+    }
+
+    #title-container {
+        font-size: 18px;
+        margin-bottom: 1rem;
+    }
+
+    #word-section {
+        width: auto;
+        height: 50px;
+        text-align: center;
+    }
+
+    .letter {
+        width: 40px;
+        height: 60px;
+        font-size: 40px;
+    }
+
+    #keyboard-section {
+        width:inherit;
+        height: 300px;
+        text-align: center;
+        padding-top: 15px;
+    }
+    
+    .keyboard-key {
+        font-size: 50px;
+        margin: 10px 5px;
+        line-height: 40px;
+    }
+}
+
+@media (min-width: 992px) {
+    #main {
+        width: 800px;
+        height: 300px;
+        flex-flow: column wrap;
+        margin: 0 auto;
+    }
+
+    #title-container {
+        margin: 40px auto 0;
     }
 
     #keyboard-section {
@@ -117,18 +174,3 @@ button:disabled {
         margin: 2px 2px;
     }
 }
-
-@media (min-width: 740px) and (max-height: 360px) {
-    #main {
-        background-color: lightgoldenrodyellow;
-    }
-
-    #keyboard-section {
-        width: 330px;
-        height: 250px;
-        margin-top: 50px;
-    }
-}
-
-
-
