--- a/assets/css/popup._section.css
+++ b/assets/css/popup._section.css
@@ -2,8 +2,7 @@
     position: absolute;
     background-color: #099dd8;
     opacity: 0.9;
-    border-radius: 10%;
-    border: 2px solid #0a0191;
+    border: 4px solid #0a0191;
     font-weight: 900;
     padding: 20px 0;
     font-weight: 800;
@@ -24,6 +23,7 @@
     height: 230px;
     font-size: 55px;
     margin-top: 5rem;
+    border-radius: 10%;
 }
 
 #pop-box-large {
@@ -32,6 +32,7 @@
     text-align: center;
     font-size: 44px;
     line-height: 44px;
+    border-radius: 1%;
 }
 
 .pop-btn {
@@ -55,8 +56,7 @@
 
 @media (min-width: 568px) {
     #pop-box-large {
-        display: block;
-        
+        display: block;     
     }
 
     #pop-box-small {
@@ -69,7 +69,12 @@
 @media (min-width: 768px) and (min-height: 1024px) {
     #pop-box-small {
         width: 450px;
+        height: 250px;
         margin-top: 130px;
+    }
+
+    .pop-btn {
+        margin: 50px 8px 0;
     }
 }
 
@@ -82,5 +87,15 @@
         width: 330px;
         height: 210px;
         margin-top: 5rem;
+    }
+}
+
+@media (min-width: 1200px) {
+    .pop-btn {
+        margin: 30px 20px 0;
+    }
+
+    #pop-box-large {
+        padding: 30px 60px;   
     }
 }
