--- a/assets/css/play_section.css
+++ b/assets/css/play_section.css
@@ -153,6 +153,7 @@
 @media (min-width: 568px) {
     #play-section {
         padding: 0;
+        margin: 0;
         width: 300px;
         height: 190px;
     }
