--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,8 +202,8 @@ button:disabled {
     }
 
     #title-container {
-        margin-bottom: 6rem;
-        height: auto;
+        margin-bottom: 3rem;
+        height: 170px;
     }
 
     #title{
