[FIXED] Minor style bug

--- a/assets/css/popup._section.css
+++ b/assets/css/popup._section.css
@@ -22,7 +22,7 @@
     width: 310px;
     height: 230px;
     font-size: 55px;
-    margin-top: 5rem;
+    margin-top: 60px;
     border-radius: 10%;
 }
 
