--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 @import "../css/utility.css";
 @import "../css/play_section.css";
-@import "../css/popup._section.css";
+@import "../css/popup_section.css";
 
 
 *{box-sizing: border-box;
