[FIXED] Body style at 1200px breakpoint
Added 700px min-height property on body at 1200px breakpoint

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,6 +195,10 @@ button:disabled {
 }
 
 @media (min-width: 1200px) {
+    body {
+        min-height: 700px;
+    }
+    
     #main {
         width: 1070px;
         height: 430px;
